--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
             </li>
           </ul>
         </nav>
+        <a href="">
+        <svg width="40" height="40" class="header__svg">
+          <use href="./images/symbol-defs.svg#icon-menu_40px"></use>
+        </svg>
+        
         <ul class="auth-nav">
           <li>
             <a href="info@devstudio.com" class="auth-nav__smartphone">
