--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
     <footer class="footer">
       <div class="conteiner">
         <div class="footter__flex">
-          <div>
+          <div class="footer__display">
             <a href="./index.html" class="footer__logo"
               >Web<span class="logo__name ">Studio</span></a
             >
