--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
             <a href="./index.html" class="header__logo">Web<span class="header__studio">Studio</span></a>
             <ul class="site-nav">
               <li>
-                <a href="./index.html" class="site-nav__link ">Студія</a>
+                <a href="./index.html" class="site-nav__link">Студія</a>
               </li>
               <li>
                 <a href="./portfolio.html" class="site-nav__link current">Портфоліо</a>
@@ -38,24 +38,29 @@
               </li>
             </ul>
           </nav>
-          <ul class="auth-nav">
-            <li>
-              <a href="info@devstudio.com" class="auth-nav__smartphone">
-                <svg class="auth-nav__envelope" width="16" height="12">
-                  <use href="./images/symbol-defs.svg#icon-envelope"></use>
-                </svg>
-                info@devstudio.com
-              </a>
-            </li>
-            <li>
-              <a href="tel:+380961111111" class="auth-nav__smartphone">
-                <svg class="auth-nav__icon" width="10" height="16">
-                  <use href="./images/symbol-defs.svg#icon-smartphone"></use>
-                </svg>
-                +380961111111
-              </a>
-            </li>
-          </ul>
+          <a href="">
+            <svg width="40" height="40" class="header__svg">
+              <use href="./images/symbol-defs.svg#icon-menu_40px"></use>
+            </svg>
+    
+            <ul class="auth-nav">
+              <li>
+                <a href="info@devstudio.com" class="auth-nav__smartphone">
+                  <svg class="auth-nav__envelope" width="16" height="12">
+                    <use href="./images/symbol-defs.svg#icon-envelope"></use>
+                  </svg>
+                  info@devstudio.com
+                </a>
+              </li>
+              <li>
+                <a href="tel:+380961111111" class="auth-nav__smartphone">
+                  <svg class="auth-nav__icon" width="10" height="16">
+                    <use href="./images/symbol-defs.svg#icon-smartphone"></use>
+                  </svg>
+                  +380961111111
+                </a>
+              </li>
+            </ul>
         </div>
       </div>
     </header>
