--- a/index.html
+++ b/index.html
@@ -40,11 +40,12 @@
             </li>
           </ul>
         </nav>
-        <a href="">
-        <svg width="40" height="40" class="header__svg">
-          <use href="./images/symbol-defs.svg#icon-menu_40px"></use>
+        <button type="button" class="menu-button is-open">
+        <svg width="40" height="40" class="header__svg" aria-label="переключател моб меню">
+          <use class="icon-menu" href="./images/symbol-defs.svg#icon-menu_40px"></use>
+          <use class="icon-cross" href="./images/symbol-defs.svg#icon-close_40px"></use>
         </svg>
-        
+        </button>
         <ul class="auth-nav">
           <li>
             <a href="info@devstudio.com" class="auth-nav__smartphone">
