--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                   <use href="./images/symbol-defs.svg#icon-close_40px"></use>
                 </svg>
               </button>
+          <div class="mobile-menu__container">
               <ul class="mobile-menu__nav">
             <li>
               <a href="./index.html" class="mobile-menu__link current">Студія</a>
@@ -75,30 +76,46 @@
                   </li>
                  
                 </ul>
-                  <ul class="">
+                  <ul class="mobile-menu__social">
                     
                   <li>
-                    <a href="" class="">
+                    <a href="" class="mobile-menu__insta">
                       Instagram
                      </a>
                   </li>
+                    <li>
+                      <a href="" class="mobile-menu__br">
+                        |
+                      </a>
+                    </li>
                   <li>
-                    <a href=""  class="">
+                    <a href=""  class="mobile-menu__insta">
                    Twitter
                     </a>
                   </li>
                   <li>
-                    <a href=""  class="">
+                    <a href="" class="mobile-menu__br">
+                      |
+                    </a>
+                  </li>
+                  <li>
+                    <a href=""  class="mobile-menu__insta">
                    Facebook
                     </a>
                   </li>
                   <li>
-                    <a href=""  class="">
+                    <a href="" class="mobile-menu__br">
+                      |
+                    </a>
+                  </li>
+                  <li>
+                    <a href=""  class="mobile-menu__insta">
                    LinkedIn
                     </a>
                   </li>
-                </ul>
 
+                </ul>
+              </div>
         </div>
         <ul class="auth-nav">
           <li>
