--- a/index.html
+++ b/index.html
@@ -578,3 +578,39 @@
     <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
+
+
+
+
+
+
+          <picture>
+                <source
+                  srcset="
+                    ./images/mobile-image/mobile-person-1.jpg    1x,
+                    ./images/mobile-image/mobile-person-1@x2.jpg 2x
+                  "
+                  media="(max-width: 767px)"
+                  type="image/jpeg"
+                />
+                <source
+                  srcset="
+                    ./images/tablet-image/tablet-person-1.jpg    1x,
+                    ./images/tablet-image/tablet-person-1@x2.jpg 2x
+                  "
+                  media="(max-width: 1199px)"
+                  type="image/jpeg"
+                />
+                <source
+                  srcset="
+                    ./images/desktop-image/desktop-person-1.jpg    1x,
+                    ./images/desktop-image/desktop-person-1@x2.jpg 2x
+                  "
+                  type="image/jpeg"
+                />
+                <img
+                  class="worker-list__img"
+                  src="./images/mobile-image/mobile-person-1.jpg"
+                  alt="Фото Ігора Дем'янченка"
+                />
+              </picture>
